instagram bug fix on mobile

--- a/static-html/css/style.css
+++ b/static-html/css/style.css
@@ -1498,7 +1498,7 @@ header.fixed nav {
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
-  padding: 65px 0 20px 0;
+  padding: 65px 20px 20px;
   text-align: center;
   color: #CACACA;
   margin-top: 50px;
@@ -1700,9 +1700,9 @@ header.fixed nav {
     margin-bottom: 5px; }
     .menu-item-main.text-first + .menu-item-main.text-first {
       border-left: 1px solid white; } }
-.modal-footer {
-  text-align: left; }
-
+@media (max-width: 400px) {
+  .modal .detail-heading .col-md-6 {
+    width: 100%; } }
 .column {
   margin-bottom: 20px; }
 
@@ -1740,9 +1740,32 @@ header.fixed nav {
   font-size: 15px;
   margin-top: 5px; }
 
-@media (max-width: 360px) {
-  .detail-heading .col-md-6 {
-    width: 100%; } }
+.modal .carousel {
+  margin: 10px 0 50px; }
+  .modal .carousel .item {
+    padding: 20px; }
+  .modal .carousel .item > .col-xs-3 {
+    padding: 0 5px; }
+  .modal .carousel .carousel-control.left,
+  .modal .carousel .carousel-control.right {
+    background: none; }
+  .modal .carousel .fa {
+    color: #4bb9e8;
+    font-size: 24px;
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    font-weight: bold;
+    text-shadow: none;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%); }
+    .modal .carousel .fa.fa-angle-double-left {
+      right: auto;
+      left: 0; }
+
 .heading-box {
   padding: 30px 0;
   background: url(../img/bg-head-contact.png) no-repeat left center;
